--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,16 +2,27 @@
 <html>
 <head>
   <title>Workspace</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<% flash.each do |message_type, message| %>
-  <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
-<% end %>
+  <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-12 col-md-4">
 
-<%= yield %>
+          <div class="row">
+            <%= render "shared/alert" %>
+          </div>
+
+          <div class="row">
+            <%= yield %>
+          </div>
+
+        </div>
+      </div>
+  </div>
 
 </body>
 </html>
