--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  
+  <%= render "shared/navigation" %>
+  
   <div class="container-fluid">
       <div class="row">
         <div class="col-sm-12 col-md-4">
