--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,20 +11,16 @@
   
   <%= render "shared/navigation" %>
   
+  <%= render "shared/alert" %>
+  
   <div class="container-fluid">
+    
       <div class="row">
-        <div class="col-sm-12 col-md-4">
-
-          <div class="row">
-            <%= render "shared/alert" %>
-          </div>
-
-          <div class="row">
-            <%= yield %>
-          </div>
-
+        <div class="col col-md-4">
+          <%= yield %>
         </div>
       </div>
+      
   </div>
 
 </body>
