--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,22 @@
-<p>
+<h3>
   <b>Name:</b>
   <%= @current_user.name %>
-</p>
-<div class="row">
-  <div class="col">
-    <%= form_for @post, url: posts_path, remote: true do |f| %>
-      <%= f.text_field :content %>
-      <%= f.date_select :due %>
-      <%= f.submit "Submit" %>
+</h3>
+<!--<div class="row">-->
+<!--  <div class="col">-->
+    <%= form_for @post, url: posts_path, remote: true, html: { class: "form-inline mb-3" } do |f| %>
+      <div class="form-group">
+        <%= f.text_field :content, class: "form-control", placeholder: "Anything to do" %>
+        <div class="input-group date">
+          <%= f.text_field :due, class: "form-control", placeholder: "Due" %>
+          <span class="input-group-addon p-1 mt-1 bg-light"><i class="far fa-calendar-alt fa-lg"></i></span>
+        </div>
+        <%#= f.date_select :due, class: "form-control"%>
+        <%= f.submit "Submit", class: "btn btn-primary" %>
+      </div>
   <% end %>
-  </div>
-</div>
+<!--  </div>-->
+<!--</div>-->
 
 <% if @posts.any? %>
   <div class="row">
