changed data type of due and reformed codes for layout

--- a/app/views/shared/_list_up_posts.html.erb
+++ b/app/views/shared/_list_up_posts.html.erb
@@ -1,7 +1,9 @@
-<% @posts.each do |post| %>
-  <li class="list-group-item">
-    <b><%= post.content %></b>
-    Due: <%= post.due %>
-    <%= link_to "Delete", post_path(post.id), method: :delete, class: "btn btn-danger btn-sm float-right", remote: true, confirm: "Are you sure?" %>
-  </li>
+<% if @posts.any? %>
+  <% @posts.each do |post| %>
+    <li class="list-group-item">
+      <b><%= post.content %></b>
+      Due: <%= post.due %>
+      <%= link_to "Delete", post_path(post.id), method: :delete, class: "btn btn-danger btn-sm float-right", remote: true, confirm: "Are you sure?" %>
+    </li>
+  <% end %>
 <% end %>
