--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="field">
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, autocomplete: :off %>
   </div>
 
   <div class="field">
     <%= form.label :email %>
-    <%= form.text_field :email %>
+    <%= form.text_field :email, autocomplete: :off %>
   </div>
 
   <div class="field">
